--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,11 @@ body {
     top: 3em;
     padding: 1em 10em 1em 10em;
     font-family: arial, sans-serif;
+    text-align: center;
 }
 
 /* Mobile */
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 560px) {
     body {
         padding: 1em 1em 1em 1em;
     }
